--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,9 +3,9 @@
 <h2>Cats that are not sleepy!</h2>
 
 <ul>
-  {{#each cats}}
-    {{#unless sleepy}}
-      {{> cats/cat-block sleep=true}}
+  {{#each burgers}}
+    {{#unless devoured}}
+      {{> burgers/burger-block devoured=true}}
     {{/unless}}
   {{/each}}
 </ul>
@@ -13,9 +13,9 @@
 <h2>Cats that are sleepy!</h2>
 
 <ul>
-  {{#each cats}}
-    {{#if sleepy}}
-      {{> cats/cat-block sleep=false}}
+  {{#each burgers}}
+    {{#if devoured}}
+      {{> burgers/burger-block devoured=false}}
     {{/if}}
   {{/each}}
 </ul>
@@ -29,10 +29,10 @@
   </div>
 
   <div class="form-group">
-    <label for="slee">Sleepy?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-    <input type="radio" name="sleepy" value="0"> Awake
+    <label for="devoured">devour?</label><br>
+    <input type="radio" name="devoured" value="1" checked> devour!<br>
+    <input type="radio" name="devoured" value="0"> not devoured 
   </div>
 
-  <button type="submit">Add Cat</button>
+  <button type="submit">Add burger</button>
 </form>
