--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
-<h1>Cats!</h1>
+<h1>Burgers!</h1>
 
-<h2>Cats that are not sleepy!</h2>
+<h2>burgers that are not devoured</h2>
 
 <ul>
   {{#each burgers}}
@@ -10,7 +10,7 @@
   {{/each}}
 </ul>
 
-<h2>Cats that are sleepy!</h2>
+<h2>Burgers that are devoured!</h2>
 
 <ul>
   {{#each burgers}}
@@ -20,7 +20,7 @@
   {{/each}}
 </ul>
 
-<h2>Add a Cat</h2>
+<h2>Add a burger</h2>
 <form class="create-form">
 
   <div class="form-group">
